Update routing, courses, and more

--- a/docs/hpe-vm-essentials/09-migration-utility.mdx
+++ b/docs/hpe-vm-essentials/09-migration-utility.mdx
@@ -2,19 +2,19 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import styles from './styles.module.css';
 
-# OS Utility
+# Migration Utility
 ---
-The RiverMeadow OS utility is a lightweight utility (less than 25 MB) that is deployed on Windows or Linux source servers that are migrated using OS based migrations. The OS utility also enables advanced optimization and modernization functionality during the workload migration.
+The RiverMeadow migration utility is a lightweight utility (less than 25 MB) that is deployed on Windows or Linux source servers that are migrated using OS based migrations. The OS utility also enables advanced optimization and modernization functionality during the workload migration.
 
-### Automated Deployment
+## Automated Deployment
 The RiverMeadow utility can be automatically deployed from the migration appliance that is deployed into the target environment. The migration appliance uses remote protocols (SSH, WinRM, SMB) to connect to the source workload and perform the utility deployment.
 
 ![](/img/rivermeadow_add_source.png)
 
-### Manual Deployment
-The RiverMeadow utility can be manually deployed by downloading the utility package from the migration appliance. This enables the utility to be rolled out across an environment using 3rd party automation tools like Ansible or Group Policy.
+## Manual Deployment
+The RiverMeadow migration utility can be manually deployed by downloading the utility package from the migration appliance. This enables the utility to be rolled out across an environment using 3rd party automation tools like Ansible or Group Policy.
 
-#### Downloading the RiverMeadow Utility Package
+### Utility Download
 The RiverMeadow utility package can be downloaded from the migration appliance that is deployed into the target environment. The agent downloads page is accessible at the following URL: https://rms_migration_appliance_ip_address:8888/agent
 
 ![An image from the static](/img/rms_agent_page.png)
